Añadir nueva carpeta al repositorio

--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/pages/home/home.page.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/pages/home/home.page.component.html
@@ -1,3 +1,8 @@
 <div class="contenedor">
-    <app-client-template></app-client-template>
+  <app-client-template>
+    <div class="container-title">
+      <div class="title-gentleman">Gentleman's</div>
+      <div class="title-cut">Cut</div>
+    </div>
+  </app-client-template>
 </div>
