--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/organisms/header/header.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/organisms/header/header.component.html
@@ -1,4 +1,7 @@
 <header id="header" class="header-container">
   <app-logo></app-logo>
   <app-navbar [items]="navItemsClient"></app-navbar>
+  <a class="icon-perfil" href="">
+    <span class="material-symbols-outlined"> account_circle </span>
+  </a>
 </header>
