--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/atoms/logo/logo.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/atoms/logo/logo.component.html
@@ -1,3 +1,3 @@
 <a href="/" class="logo d-flex align-items-center">
-  <img src="../assets/images/Logo.svg" alt="Gentleman's Cut Logo" class="logo" />
+  <img src="../assets/images/Logo.svg" alt="Gentleman's Cut Logo" class="logo img-fluid" />
 </a>
