--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/organisms/header/header.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/organisms/header/header.component.css
@@ -2,8 +2,23 @@
     position: fixed;
     display: flex;
     justify-content: space-between;
+    
     align-items: center;
-    padding: 0.5rem 5rem;
-    background-color: #F5F5F0;
+    padding: 0.2rem 5rem;
     width: 100%;
+    height: 120px;
+    z-index: 10;
+}
+
+.icon-perfil {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    outline: none;
+    color: var(--black-color);
+}
+
+.icon-perfil span {
+    font-size: 2rem;
 }
