--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/pages/home/home.page.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/pages/home/home.page.component.html
@@ -1,4 +1,11 @@
 <div class="contenedor">
+  <div #containerImagenesFlotantes class="container-imagenes-flotantes">
+    <img src="../assets/images/images-inicio/img1.jpg" alt="imagen 1" id="imagen-foltante-1" class="imagen-flotante img-fluid w-25">
+    <img src="../assets/images/images-inicio/img2.jpg" alt="imagen 1" id="imagen-foltante-2" class="imagen-flotante img-fluid w-25">
+    <img src="../assets/images/images-inicio/img3.jpg" alt="imagen 1" id="imagen-foltante-3" class="imagen-flotante img-fluid w-25">
+    <img src="../assets/images/images-inicio/img4.jpg" alt="imagen 1" id="imagen-foltante-4" class="imagen-flotante img-fluid w-25">
+    <img src="../assets/images/images-inicio/img5.jpg" alt="imagen 1" id="imagen-foltante-5" class="imagen-flotante img-fluid w-25">
+  </div>
   <app-client-template>
     <div class="container-title">
       <div class="title-gentleman">Gentleman's</div>
