--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-template/client-template.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-template/client-template.component.css
@@ -6,6 +6,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  background-color: var(--primary-color);
+  z-index: 5;
+  mix-blend-mode: exclusion;
 }
