--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/molecules/navbar/navbar.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/molecules/navbar/navbar.component.css
@@ -11,5 +11,40 @@
 
     display: flex;
     justify-content: center;
-    gap: 1.5rem;
+}
+
+.nav-list li {
+    padding: 0.5em 1.3em;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: 0.3s;
+}
+
+ul li::before {
+    content: "";
+    position: absolute;
+    inset: calc(100% - 3px) 0 0 0;
+    background-color: var(--white-color);
+    scale: 0 1;
+    transition: 0.3s, translate 0s 0.3s;
+}
+
+ul:hover li::before {
+    scale: 1;
+}
+
+ul li:hover::before {
+    translate: 0;
+    transition: 0.3s;
+}
+
+ul:hover li:has(~ li:hover)::before {
+    translate: 100% 0;
+    transition: 0.2s 0.2s, scale 0s 0.4s;
+}
+
+ul:hover li:hover ~ li::before {
+    translate: -100% 0;
+    transition: 0.2s 0.2s, scale 0s 0.4s;
 }
