--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/organisms/header/header.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/organisms/header/header.component.css
@@ -8,6 +8,7 @@
     width: 100%;
     height: 120px;
     z-index: 10;
+    mix-blend-mode: exclusion;
 }
 
 .icon-perfil {
@@ -16,9 +17,9 @@
     align-items: center;
     text-decoration: none;
     outline: none;
-    color: var(--black-color);
+    color: var(--white-color);
 }
 
 .icon-perfil span {
-    font-size: 2rem;
+    font-size: 2.3rem;
 }
