--- a/Proyecto Segundo Corte/Front/frontProyecto/src/styles.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+  background-color: var(--primary-color);
+}
+
 @font-face {
   font-family: 'Roxborough-light';
   src: url('assets/fonts/roxborough-cf-light.woff') format('truetype');
@@ -21,4 +25,5 @@
 :root {
   --primary-color: #F5F5F0;
   --black-color: #151515;
+  --white-color: #FFFDED;
 }
