--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/atoms/link/link.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/atoms/link/link.component.css
@@ -2,14 +2,23 @@ a {
     text-decoration: none;
     outline: none;
     font-family: "GT", sans-serif;
-    font-size: 0.8rem;
     line-height: 19px;
-    color: var(--black-color);
-    text-transform: uppercase;
 }
 
 .header-nav-links {
     font-size: 1rem;
+    text-transform: uppercase;
     color: var(--white-color);
 }
+
+.reservas-categoria-links {
+    font-size: 1.2rem;
+    color: var(--white-color);
+    background-color: var(--black-color);
+    padding-inline: 16px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 30px;
+}
+
 
