--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/molecules/navbar/navbar.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/molecules/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         [id]="item.id"
         [className]="item.className"
         [text]="item.text"
-        [url]="item.url">
+        [redireccion]="item.redireccion">
       </app-link>
     </li>
   </ul>
