--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/pages/reservas/reservas.page.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/pages/reservas/reservas.page.component.html
@@ -1,3 +1,3 @@
 <div class="contenedor">
-  <app-reservas-template [listaCategorias]="categorias"></app-reservas-template>
+  <app-reservas-template [listaCategorias]="categorias" [infoImagenBarberia]="infoImagenBarberia"></app-reservas-template>
 </div>
