--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-templates/reservas-template/client-reservas-template.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-templates/reservas-template/client-reservas-template.component.css
@@ -29,8 +29,11 @@
 }
 
 .section-carrito {
-    background-color: red;
+    justify-content: center;
+    align-items: center;
 }
+
+/* Seccion servicios */
 
 .header-servicios {
     display: flex;
@@ -72,4 +75,114 @@
 
     font-family: "GT", sans-serif;
     font-size: 15px;
+}
+
+.categorias-servicios ul {
+    cursor: pointer;
+}
+
+/* Seccion carrito */
+.container-carrito {
+    width: 80%;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    padding: 24px;
+    overflow: auto;
+    position: relative;
+
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 15px;
+    border-color: #E5E5E5;
+}
+
+.header-carrito {
+    gap: 1.5rem;
+    align-items: center;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.container-image-header-carrito {
+    width: 80px;
+    height: 80px;
+    min-width: 80px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.titulo-header-carrito {
+    font-family: "Roxborough-light", sans-serif;
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.calificacion-header-carrito {
+    gap: 4px;
+    align-items: center;
+
+    font-family: "GT", sans-serif;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.estrellas-calificacion-carrito {
+    color: #ffc00a;
+}
+
+.estrella {
+    width: 16px;
+    height: 16px;
+    display: flex;
+    justify-content: center;
+}
+
+.numero-votos {
+    font-weight: 400;
+}
+
+.direccion-header-carrito {
+    font-family: "GT", sans-serif;
+    font-size: 0.9rem;
+    font-weight: 400;
+    color: var(--black-light-color);
+
+    
+}
+
+.container-total-carrito {
+    font-family: "GT", sans-serif;
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.container-btn-carrito {
+    width: calc(100% - 24px - 24px);
+    display: flex;
+    position: absolute;
+    bottom: 24px;
+    height: 60px;
+}
+
+.btn-carrito {
+    width: 100%;
+    height: 100%;
+    background-color: var(--black-color);
+    color: var(--white-color);
+    border: none;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+    font-family: "Roxborough-light", sans-serif;
+    font-size: 2rem;
+    transition: background-color 0.3s ease;
+}
+
+.btn-carrito:hover {
+    background-color: var(--black-light-color);
 }
