servicios nueva reserva

--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/organisms/header/header.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/organisms/header/header.component.html
@@ -1,6 +1,6 @@
 <header id="header" class="header-container">
   <app-logo></app-logo>
-  <app-navbar [items]="navItemsClient"></app-navbar>
+  <app-navbar [items]="navBar"></app-navbar>
   <a class="icon-perfil" href="">
     <span class="material-symbols-outlined"> account_circle </span>
   </a>
