--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-templates/home-template/client-home-template.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-templates/home-template/client-home-template.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header [navBar]="navBar"></app-header>
 
 <div class="container-body">
     <div #containerImagenesFlotantes class="container-imagenes-flotantes">
