--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/pages/home/home.page.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/pages/home/home.page.component.html
@@ -1,3 +1,6 @@
 <div class="container-body">
-  <app-client-home-template [infoImagenes]="infoImagenes"></app-client-home-template>
+  <app-client-home-template 
+    [navBar]="navBar"
+    [infoImagenes]="infoImagenes">
+  </app-client-home-template>
 </div>
