--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/atoms/link/link.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/atoms/link/link.component.html
@@ -1,4 +1,4 @@
-<a [id]="id" [class]="className" [routerLink]="redireccion" [href]="url">
+<a [id]="id" [class]="className" [routerLink]="redireccion" [fragment]="url">
     <span>
         {{ text }}
     </span>
