--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-templates/reservas-template/client-reservas-template.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-templates/reservas-template/client-reservas-template.component.css
@@ -1,36 +1,31 @@
 .container-body {
-  position: relative;
   width: 100%;
-  height: calc(100vh - 120px);
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  top: 120px;
 }
 
 .container-reservas {
     width: 80%;
     height: 100%;
+    margin-bottom: 1.5rem;
     background-color: var(--white-color);
-    border-top-left-radius: 15px;
-    border-top-right-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-@media (max-width: 1800px) {
-    .container-reservas {
-        width: 90%;
-    }
+    border-radius: 15px;
+    box-shadow: 0 0px 8px rgba(0, 0, 0, 0.1);
 }
 
 .section-servicios {
-    padding: 1.5em 2em;
+    padding-left: 2em;
+    padding-right: 2em;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .section-carrito {
     justify-content: center;
-    align-items: center;
 }
 
 /* Seccion servicios */
@@ -40,15 +35,18 @@
     flex-direction: column;
     mix-blend-mode: exclusion;
     color: var(--white-color);
-    margin-bottom: 32px;
+}
+
+.miga-de-pan {
+    margin-top: 1em;
+    margin-left: 2em;
+    padding: 0;
 }
 
 .miga-de-pan ul {
     display: flex;
     list-style: none;
     align-items: center;
-    padding: 0;
-    margin: 0;
     gap: 8px;
 
     font-family: "GT", sans-serif;
@@ -65,6 +63,10 @@
     font-size: 4.5rem;
 }
 
+.categorias-servicios {
+    align-items: center;
+}
+
 .categorias-servicios ul {
     display: flex;
     list-style: none;
@@ -72,29 +74,26 @@
     padding: 0;
     margin: 0;
     gap: 8px;
+    cursor: pointer;
 
     font-family: "GT", sans-serif;
     font-size: 15px;
 }
 
-.categorias-servicios ul {
-    cursor: pointer;
-}
-
 /* Seccion carrito */
 .container-carrito {
-    width: 80%;
-    height: 90%;
+    width: 90%;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     padding: 24px;
+    gap: 1rem;
     overflow: auto;
-    position: relative;
 
     border-width: 1px;
     border-style: solid;
     border-radius: 15px;
-    border-color: #E5E5E5;
+    border-color: var(--border-black-color);
 }
 
 .header-carrito {
@@ -148,8 +147,11 @@
     font-size: 0.9rem;
     font-weight: 400;
     color: var(--black-light-color);
+}
 
-    
+.container-servicios-seleccionados-carrito {
+    flex: 1;
+    background-color: red;
 }
 
 .container-total-carrito {
@@ -158,17 +160,8 @@
     font-weight: 600;
 }
 
-.container-btn-carrito {
-    width: calc(100% - 24px - 24px);
-    display: flex;
-    position: absolute;
-    bottom: 24px;
-    height: 60px;
-}
-
 .btn-carrito {
     width: 100%;
-    height: 100%;
     background-color: var(--black-color);
     color: var(--white-color);
     border: none;
@@ -185,4 +178,11 @@
 
 .btn-carrito:hover {
     background-color: var(--black-light-color);
+}
+
+
+@media (max-width: 1800px) {
+    .container-reservas {
+        width: 90%;
+    }
 }
