seleccionar servicio quasi fish

--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/pages/reserva/seleccion-servicio-reserva/reservas.page.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/pages/reserva/seleccion-servicio-reserva/reservas.page.component.html
@@ -1,8 +1,8 @@
 <div class="contenedor">
-  <app-reservas-template
+  <app-seleccion-servicio-template
     [navBar]="navBar"
     [listaCategorias]="categorias"
     [listaServicios]="listaServicios"
     [infoImagenBarberia]="infoImagenBarberia">
-  </app-reservas-template>
+  </app-seleccion-servicio-template>
 </div>
