--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/atoms/link/link.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/atoms/link/link.component.css
@@ -23,12 +23,12 @@ a {
 }
 
 .reservas-categoria-links:hover {
-    background-color: var(--primary-color);
+    background-color: var(--grey-color);
 }
 
 .reservas-categoria-links.activo {
     color: var(--white-color);
-    background-color: var(--black-color);
+    background-color: var(--select-color);
     transform: scale(1.05);
 }
 
