--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/molecules/card-servicio-reserva/card.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/molecules/card-servicio-reserva/card.component.html
@@ -1,4 +1,4 @@
-<div [id]="id" class="card-servicio d-flex">
+<div [id]="id" class="card-servicio d-flex" [ngClass]="{ 'servicio-seleccionado': seleccionado }" (click)="onClick()">
     <div class="container-card">
         <div class="info-servicio d-flex flex-column">
             <span class="titulo-servicio">{{ titulo }}</span>
@@ -7,10 +7,17 @@
         </div>
 
         <button class="btn-agregar-carrito" *ngIf="agregarCarrito">
-            <span class="icono">
+            <span class="icono-agregar">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                     <path
                         d="M13.125 3.75a1.125 1.125 0 0 0-2.25 0v7.125H3.75a1.125 1.125 0 0 0 0 2.25h7.125v7.125a1.125 1.125 0 0 0 2.25 0v-7.125h7.125a1.125 1.125 0 0 0 0-2.25h-7.125z">
+                    </path>
+                </svg>
+            </span>
+            <span class="icono-agregado">
+                <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+                    <path
+                        d="m29.061 9.06-16 16a1.5 1.5 0 0 1-2.125 0l-7-7a1.503 1.503 0 1 1 2.125-2.124L12 21.875 26.939 6.938a1.502 1.502 0 1 1 2.125 2.125z">
                     </path>
                 </svg>
             </span>
