--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-templates/nueva-reservas-template/seleccion-servicio/client-reservas-template.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-templates/nueva-reservas-template/seleccion-servicio/client-reservas-template.component.css
@@ -1,6 +1,5 @@
 .container-body {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -10,37 +9,19 @@
 .container-reservas {
     width: 80%;
     height: 100%;
+    min-height: calc(100vh - 145px);
     margin-bottom: 1.5rem;
     background-color: var(--white-color);
     border-radius: 15px;
+    position: relative;
     box-shadow: 0 0px 8px rgba(0, 0, 0, 0.1);
-}
-
-.section-servicios {
-    padding-left: 2em;
-    padding-right: 2em;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.section-carrito {
-    justify-content: center;
-}
-
-/* Seccion servicios */
-
-.header-servicios {
-    display: flex;
-    flex-direction: column;
-    mix-blend-mode: exclusion;
-    color: var(--white-color);
 }
 
 .miga-de-pan {
     margin-top: 1em;
     margin-left: 2em;
     padding: 0;
+    display: flex;
 }
 
 .miga-de-pan ul {
@@ -58,9 +39,39 @@
     vertical-align: middle;
 }
 
+.contenedor {
+    height: 100%;
+    min-height: calc(100vh - 183px);
+}
+
+.section-servicios {
+    height: 100%;
+    padding-left: 2em;
+    padding-right: 2em;
+    padding-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    position: relative;
+}
+
+.section-carrito {
+    justify-content: center;
+}
+
+/* Seccion servicios */
+
+.header-servicios {
+    display: flex;
+    flex-direction: column;
+    mix-blend-mode: exclusion;
+    color: var(--white-color);
+}
+
 .titulo {
     font-family: 'Roxborough-light', sans-serif;
     font-size: 4.5rem;
+    text-transform: uppercase;
 }
 
 .categorias-servicios {
@@ -74,34 +85,33 @@
     padding: 0;
     margin: 0;
     gap: 8px;
-    cursor: pointer;
 
     font-family: "GT", sans-serif;
     font-size: 15px;
 }
 
+.categorias-servicios  ul  li {
+    cursor: pointer;
+}
+
 /* Seccion carrito */
 .container-carrito {
-    width: 90%;
-    height: 80vh;
+    height: 76vh;
     display: flex;
     flex-direction: column;
     padding: 24px;
     gap: 1rem;
-    overflow: auto;
 
     border-width: 1px;
     border-style: solid;
     border-radius: 15px;
     border-color: var(--border-black-color);
+    position: fixed;
 }
 
 .header-carrito {
     gap: 1.5rem;
     align-items: center;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .container-image-header-carrito {
@@ -151,10 +161,62 @@
 
 .container-servicios-seleccionados-carrito {
     flex: 1;
-    background-color: red;
+    overflow-y: hidden;
+}
+
+.carrito {
+    max-height: 90%;
+    width: 100%;
+    overflow-y: auto;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    padding-right: 4px;
+    border-bottom: 1px solid var(--grey-dark-color);
+    font-family: "GT", sans-serif;
+    font-size: 1rem;
+}
+
+.carrito::-webkit-scrollbar {
+    width: 4px;
+}
+
+.carrito::-webkit-scrollbar-thumb {
+    background: var(--black-color);
+    border-radius: 10px;
+}
+
+.carrito ul {
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 8px;
+
+    font-family: "GT", sans-serif;
+    color: var(--black-light-color);
+}
+
+.container-servicio-carrito {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.info-servicio-carrito {
+    display: flex;
+    flex-direction: column;
+}
+
+.nombre-servicio-carrito,.precio-servicio-carrito {
+    font-weight: 600;
+    color: var(--black-color);
 }
 
 .container-total-carrito {
+    margin-top: 1rem;
     font-family: "GT", sans-serif;
     font-size: 1.2rem;
     font-weight: 600;
@@ -162,7 +224,7 @@
 
 .btn-carrito {
     width: 100%;
-    background-color: var(--black-color);
+    background-color: var(--select-color);
     color: var(--white-color);
     border: none;
     border-radius: 50px;
@@ -170,16 +232,32 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    padding-top: 8px;
+    padding-bottom: 8px;
 
     font-family: "Roxborough-light", sans-serif;
     font-size: 2rem;
     transition: background-color 0.3s ease;
 }
 
-.btn-carrito:hover {
-    background-color: var(--black-light-color);
+.btn-carrito:disabled {
+    opacity: 0.5;
+    cursor: not-allowed;
 }
 
+.btn-carrito:not(:disabled):hover {
+    opacity: 0.85;
+}
+
+#error-no-servicios {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: "GT", sans-serif;
+    font-size: 2rem;
+    text-align: center;
+}
 
 @media (max-width: 1800px) {
     .container-reservas {
