--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/molecules/card-servicio-reserva/card.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/molecules/card-servicio-reserva/card.component.html
@@ -1,7 +1,7 @@
 <div [id]="id" class="card-servicio d-flex" [ngClass]="{ 'servicio-seleccionado': seleccionado }" (click)="onClick()">
     <div class="container-card">
         <div class="info-servicio d-flex flex-column">
-            <span class="titulo-servicio">{{ titulo }}</span>
+            <span class="titulo-servicio">{{ nombre }}</span>
             <span class="duracion-servicio">{{ duracion }}</span>
             <span class="precio-servicio">{{ precio }}</span>
         </div>
