--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/organisms/info-servicios-reserva/info-servicios.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/organisms/info-servicios-reserva/info-servicios.component.html
@@ -6,7 +6,7 @@
         <app-card-servicio
             *ngFor="let servicio of listaServicios"
             [id]="servicio.id"
-            [titulo]="servicio.titulo"
+            [nombre]="servicio.nombre"
             [duracion]="servicio.duracion"
             [precio]="servicio.precio"
             [agregarCarrito]="true"
