--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/molecules/car-barbero-reserva/car-barbero-reserva.component.html
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/shared/molecules/car-barbero-reserva/car-barbero-reserva.component.html
@@ -1,1 +1,38 @@
-<p>car-barbero-reserva works!</p>
+<div [id]="id" class="card-barbero d-flex" [ngClass]="{ 'barbero-seleccionado': seleccionado }" (click)="onClick()">
+    <div class="container-card">
+        <div class="info-barbero d-flex align-items-center justify-content-center">
+            <div class="img-barbero">
+                <app-imagenes *ngIf="foto; else noFoto" [rutaImagen]="foto" [titulo]="'Imagen Barbero'"
+                    [id]="'img-' + id" [className]="'img-seleccion-barbero'">
+                </app-imagenes>
+                <ng-template #noFoto>
+                    <span class="sin-foto">
+                        <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+                            <path
+                                d="M30.6 18.8a1 1 0 0 1-1.4-.2A6.45 6.45 0 0 0 24 16a1 1 0 0 1 0-2 3 3 0 1 0-2.905-3.75 1 1 0 0 1-1.937-.5 5 5 0 1 1 8.217 4.939 8.5 8.5 0 0 1 3.429 2.71A1 1 0 0 1 30.6 18.8m-6.735 7.7a1 1 0 1 1-1.73 1 7.125 7.125 0 0 0-12.27 0 1 1 0 1 1-1.73-1 9 9 0 0 1 4.217-3.74 6 6 0 1 1 7.296 0 9 9 0 0 1 4.217 3.74M16 22a4 4 0 1 0 0-8 4 4 0 0 0 0 8m-7-7a1 1 0 0 0-1-1 3 3 0 1 1 2.905-3.75 1 1 0 0 0 1.938-.5 5 5 0 1 0-8.218 4.939 8.5 8.5 0 0 0-3.425 2.71A1 1 0 1 0 2.8 18.6 6.45 6.45 0 0 1 8 16a1 1 0 0 0 1-1">
+                            </path>
+                        </svg>
+                    </span>
+                </ng-template>
+            </div>
+            <span class="nombre-barbero">{{ nombre }}</span>
+        </div>
+
+        <button class="btn-agregar-carrito" *ngIf="agregarCarrito">
+            <span class="icono-agregar">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                    <path
+                        d="M13.125 3.75a1.125 1.125 0 0 0-2.25 0v7.125H3.75a1.125 1.125 0 0 0 0 2.25h7.125v7.125a1.125 1.125 0 0 0 2.25 0v-7.125h7.125a1.125 1.125 0 0 0 0-2.25h-7.125z">
+                    </path>
+                </svg>
+            </span>
+            <span class="icono-agregado">
+                <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32">
+                    <path
+                        d="m29.061 9.06-16 16a1.5 1.5 0 0 1-2.125 0l-7-7a1.503 1.503 0 1 1 2.125-2.124L12 21.875 26.939 6.938a1.502 1.502 0 1 1 2.125 2.125z">
+                    </path>
+                </svg>
+            </span>
+        </button>
+    </div>
+</div>
