--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-templates/nueva-reservas-template/seleccion-servicio/client-reservas-template.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-templates/nueva-reservas-template/seleccion-servicio/client-reservas-template.component.css
@@ -33,6 +33,12 @@
 
     font-family: "GT", sans-serif;
     font-size: 15px;
+    mix-blend-mode: exclusion;
+    color: var(--white-dark-color);
+}
+
+#servicios-miga {
+    color: var(--white-color);
 }
 
 .flecha-miga svg{
@@ -242,7 +248,7 @@
     width: 100%;
     background-color: var(--select-color);
     color: var(--white-color);
-    border: none;
+    border: 1px solid var(--select-color);
     border-radius: 50px;
     display: flex;
     justify-content: center;
@@ -253,7 +259,7 @@
 
     font-family: "Roxborough-light", sans-serif;
     font-size: 2rem;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 .btn-carrito:disabled {
@@ -262,7 +268,8 @@
 }
 
 .btn-carrito:not(:disabled):hover {
-    opacity: 0.85;
+    background-color: transparent;
+    color: var(--select-color);
 }
 
 #error-no-servicios {
