--- a/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-templates/home-template/client-home-template.component.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/app/templates/client-templates/home-template/client-home-template.component.css
@@ -6,7 +6,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: var(--primaty-color);
+  background-color: var(--primary-color);
   top: 0;
 }
 
