--- a/Proyecto Segundo Corte/Front/frontProyecto/src/styles.css
+++ b/Proyecto Segundo Corte/Front/frontProyecto/src/styles.css
@@ -4,9 +4,12 @@
     box-sizing: border-box;
 }
 
-html, body {
+html, body, .container-page {
   background-color: var(--primary-color);
   scroll-behavior: smooth;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 @font-face {
@@ -31,7 +34,7 @@ html, body {
   --black-light-color: rgba(40, 40, 40, 0.9);
   --border-black-color: #E5E5E5;
   --grey-color: #dadada63;
-  --grey-dark-color: #8a8a8a63;
+  --grey-dark-color: #89898963;
   --select-color: #852b23;
   --select-background-color: rgba(133, 43, 35, 0.17);
 }
